test/netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: default
spec:
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: [ "sleep", "infinity" ]
      securityContext:
        capabilities:
          add: ["NET_ADMIN", "SYS_TIME"]
