test/test-awsecr-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-awsecr
  namespace: infrastructure
spec:
  serviceAccountName: ecr-update-service-account
  restartPolicy: Never
  containers:
  - name: test-awser-pod
    image: awsecr:1.0.0
    imagePullPolicy: Never
    command: ["/bin/ash","-c","trap : TERM INT; sleep infinity & wait"]
    envFrom:
      - secretRef:
          name: aws-credentials
