test/test-observer.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: observer
  namespace: default
---
apiVersion: v1
kind: Service
metadata:
  name: observer
  namespace: default
  labels:
    app: observer
    service: observer
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: observer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: observer
      version: v1
  template:
    metadata:
      labels:
        app: observer
        version: v1
    spec:
      serviceAccountName: observer
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: observer
          ports:
            - containerPort: 3000
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: observer-route
  namespace: default
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: https
      port: 443
  hostnames: ["observer.johnkoepp.com"]
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: observer
        namespace: default
        port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: observer-redirect
  namespace: default
  labels: 
    koeppster.net/aws_common_name: observer.johnkoepp.com
    koeppster.net/aws_status: waiting
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: http
      port: 80
  hostnames: ["observer.johnkoepp.com"]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
