test/test-tcproute.yaml
#
# Resources to test test GatewayAPI, TCPRoute, Istio and Metallb together.
#
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-echo-gateway
  namespace: default
  annotations:
    coredns.io/hostname: "echo.k8s.koeppster.lan"
spec:
  gatewayClassName: istio
  listeners:
    - name: port2701
      port: 2701
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-deployment
  namespace: default
  labels:
    app: tcp-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tcp-echo
  template:
    metadata:
      labels:
        app: tcp-echo
    spec:
      containers:
        - name: tcp-echo-container
          image: cjimti/go-echo:latest
          imagePullPolicy: Always
          env:
            - name: TCP_PORT
              value: "2701"
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: SERVICE_ACCOUNT
              valueFrom:
                fieldRef:
                  fieldPath: spec.serviceAccountName
          ports:
            - name: tcp-echo-port
              containerPort: 2701
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-service
  namespace: default
  labels:
    app: tcp-echo
spec:
  selector:
    app: tcp-echo
  ports:
    - protocol: TCP
      port: 2701
      targetPort: 2701
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-echo-route
  namespace: default
spec:
  parentRefs:
    - name: tcp-echo-gateway
      namespace: default
  rules:
    - backendRefs:
      - name: tcp-echo-service
        namespace: default
        port: 2701
