test/test-wasm.yaml
apiVersion: core.spinkube.dev/v1alpha1
kind: SpinApp
metadata:
  name: simple-spinapp
spec:
  image: "ghcr.io/spinkube/containerd-shim-spin/examples/spin-rust-hello:v0.13.0"
  replicas: 1
  executor: containerd-shim-spin
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-spinapp-route
  namespace: default
  labels:
    app: simple-spinapp
spec:
  parentRefs:
    - name: koeppster-lan-gateway
      namespace: infrastructure
  hostnames: ["simple-span.k8s.koeppster.lan"]
  rules:
    - backendRefs:
      - name: simple-spinapp
        port: 80
